2011-05-28 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* scripts/pages.tcl: Added finding endoffset in last 4kB of file -endoffset if not specified
	* generic/pages.c:
	* tests/pages.test: Test cases for finding endoffset

2011-05-23 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* generic/pagesCompr.c: Added support for using [zlib] command for (de)compressing zlib based pages
	* scripts/pages.tcl:
	* generic/pages.c:
	* generic/pages.h:
	
2011-05-05 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* generic/pages.c: Added [$pages cachesize] command to allow modifying cache size
	* generic/pages.h:
	* generic/pagesCmd.c:
	* scripts/pages.tcl:
	* scripts/cookvfs.tcl: Change cache size if -pagesobject passed when mounting
	* tests/pages.test: Tests for [$pages cachesize]
	* tests/common.tcl:

2011-04-08 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* scripts/pages.tcl: Added support for [$pages dataoffset] in pure Tcl version
	* tests/pages.test: Test cases for [$pages dataoffset]

2011-03-31 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* scripts/cookvfs.tcl: Added writeFiles subcommand to allow direct writing to cookfs archive
	* doc/cookfs.n:
	* doc/cookfs.html:
	* doc/cookfs.man:

2011-03-20 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* scripts/cookvfs.tcl: Properly handle mounting as volume if -volume option is specified
	* tests/vfs.test:

2011-03-20 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* scripts/cookvfs.tcl: Fix in -setmetadata not being stored if being only operation
	* tests/vfs.test:

2011-03-18 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* scripts/cookvfs.tcl: Added -setmetadata to Mount command; used to set metadata when mounting, for tools such as tabs
	* tests/vfs.test:
	* doc/cookfs.n:
	* doc/cookfs.html:
	* doc/cookfs.man:

2011-03-18 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* scripts/cookvfs.tcl: Added -fsindexobject to Mount command; used by cookit to retrieve metadata before mounting binary
	* tests/vfs.test: